# opengl-renderer

./: CMakeLists.txt  README.md
dependencies/include/: camera.h  indexBuffer.h  mesh.h  model.h  renderer.h  shader.h  texture.h  utils.h  vertexArray.h  vertexBuffer.h  vertexBufferLayout.h
dependencies/lib/: camera.cpp  indexBuffer.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp
resources/: square.mtl
resources/object/: Untitled.mtl
shaders/: cube.fs  cube.vs  light.fs  skybox.fs  skybox.vs
src/: main.cpp
